@@ -1,3 +1,10 @@
+2016-07-12  Martin Liska  <mliska@suse.cz>
+
+	* params.def: Add avg-loop niter.
+	* tree-ssa-loop-ivopts.c (avg_loop_niter): Use the param.
+	* cfgloopanal.c (expected_loop_iterations_unbounded): Likewise.
+	* doc/invoke.texi: Document the new parameter.
+
 2016-07-12  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	PR middle-end/71700
